--- a/site/themes/sogilis/layouts/_default/summary.html
+++ b/site/themes/sogilis/layouts/_default/summary.html
@@ -19,7 +19,7 @@
     {{ end }}
   </div>
   <p class="
-      title_1
+      title-1
       blogindex-article-title
       blogindex-article-text
      "
