--- a/site/themes/sogilis/layouts/partials/footer.html
+++ b/site/themes/sogilis/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <div id="sofooter" class="mainColumn">
+  <div id="sofooter" class="maincolumn">
     <section id="footer-logo">
       <a href="https://sogilis.fr/index.html"
         >
@@ -12,14 +12,14 @@
     </section>
 
     <section id="footer-subgridadress">
-      <div id="footer-subgridadress-title" class="title_1 bar-deco">Contact</div>
+      <div id="footer-subgridadress-title" class="title-1 bar-deco">Contact</div>
 
       <div id="footer-subgridadress-contactus">
-        <a class="btn_dark_grey" href="https://sogilis.fr/contact.html">
+        <a class="btn-dark-grey" href="https://sogilis.fr/contact.html">
           {{ i18n "contactUs" }}
           <svg
             version="1.1"
-            id="Calque_1"
+            class="btn-dark-grey-svg"
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
             x="0px"
@@ -28,7 +28,10 @@
             style="enable-background: new 0 0 7.5 10.3;"
             xml:space="preserve"
           >
-            <path id="Tracé_16" class="st0" d="M1.2,9.2l4.1-4.1L1.1,1.2" />
+            <path
+              class="btn-dark-grey-svg-path"
+              d="M1.2,9.2l4.1-4.1L1.1,1.2"
+            />
           </svg>
         </a>
       </div>
@@ -108,7 +111,7 @@
     </section>
 
     <section id="footer-services" class="liens_pages">
-      <div class="title_1 bar-deco">{{ i18n "services" }}</div>
+      <div class="title-1 bar-deco">{{ i18n "services" }}</div>
       <ul class="footer-nav">
         <li class="footer-nav-li">
           <a
@@ -140,7 +143,7 @@
     </section>
 
     <section id="footer-company">
-      <div class="title_1 bar-deco">{{ i18n "theCompany" }}</div>
+      <div class="title-1 bar-deco">{{ i18n "theCompany" }}</div>
       <ul class="footer-nav">
         <li class="footer-nav-li">
           <a
