--- a/site/themes/sogilis/layouts/partials/header.html
+++ b/site/themes/sogilis/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <!-- ======================================================================= -->
   <!-- Menu Desktop (display >= 576 px) -->
   <!-- ======================================================================= -->
-  <nav id="header-desktop" class="mainColumn">
+  <nav id="header-desktop" class="maincolumn">
     <a id="header-desktop-left" href="/index.html">
       <img
         id="header-desktop-left-logo"
@@ -88,7 +88,7 @@
   <!-- Menu Mobile (dispaly < 576 px) -->
   <!-- ======================================================================= -->
 
-  <div id="header-mobile" class="mainColumn">
+  <div id="header-mobile" class="maincolumn">
     <!--
     In this screen size, we have three tags child
     On the top left, the icon of Sogilis
