--- a/site/themes/sogilis/layouts/_default/baseof.html
+++ b/site/themes/sogilis/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
   {{- partial "head.html" . -}}
   <body>
     {{- partial "header.html" . -}}
-    <main class="mainColumn">
+    <main class="maincolumn">
       {{- block "main" . }}{{- end }}
     </main>
     {{- partial "footer.html" . -}} {{- partial "scripts.html" . -}}
