footer: add link to https://sogilis.fr/mentions-legal.html

--- a/site/themes/sogilis/layouts/partials/footer.html
+++ b/site/themes/sogilis/layouts/partials/footer.html
@@ -189,7 +189,7 @@
     <section id="footer-subfooter">
       <p>{{ i18n "allRightsReserved" }}</p>
       <a
-        href=""
+        href="https://sogilis.fr/mentions-legal.html"
         class="footer-nav-a"
       >
         {{ i18n "LegalInfo" }}
