--- a/site/themes/sogilis/assets/css/header-inf767.css
+++ b/site/themes/sogilis/assets/css/header-inf767.css
@@ -125,7 +125,7 @@ header {
   content: '';
   margin-top: 50%;
   width: 50vw;
-  height: 2px;
+  height: 0.125rem;
   background-color: var(--light-electric-blue);
 }
 
