footer.html: remove 'liens_pages' css class that is not used

--- a/site/themes/sogilis/layouts/partials/footer.html
+++ b/site/themes/sogilis/layouts/partials/footer.html
@@ -122,7 +122,7 @@
       </div>
     </section>
 
-    <section id="footer-services" class="liens_pages">
+    <section id="footer-services">
       <div class="title-1 bar-deco">{{ i18n "services" }}</div>
       <ul class="footer-nav">
         <li class="footer-nav-li">
