--- a/site/themes/sogilis/assets/css/footer.css
+++ b/site/themes/sogilis/assets/css/footer.css
@@ -254,10 +254,11 @@ footer {
   background-color: var(--light-electric-blue);
   margin-left: -1.5em;
 
-  /* On boostrap, for body line-height: 1.5 */
-  /* We have 1.3 + 0.2 = 1.5 */
-  /* As it, the bar is on the baseline */
-  /* But as the font have a height, so strange to be on the baseline */
+  /* On boostrap, we have line-height: 1.5 */
+  /* Therefore if we want that the hyphen has 0.4 em of blanck space at bottom */
+  /* we must have a margin top of 0.9 em */
+  /* We have 1.3 + 0.2 === 1.5 */
+  /* And 1.3 === 0.9 + 0.4 */
   height: 0.2em;
   margin-top: 0.9em;
 }
