Reduce margin between figure and corresponding caption

--- a/site/themes/sogilis/assets/css/article.css
+++ b/site/themes/sogilis/assets/css/article.css
@@ -120,6 +120,12 @@ pre {
   }
 }
 
+/* Reduce caption margin in a <figure> (instead of default h4 margin) */
+/* Generated with {{< figure …>}} in .md files */
+figcaption h4 {
+  margin-top: 0.5rem;
+}
+
 /* Section header */
 /* ========================================================================== */
 
