chore: use list layout template instead of summary
This will make possible to share same template with taxonomy

--- a/site/themes/sogilis/layouts/index.html
+++ b/site/themes/sogilis/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <div id="blogindex">
   {{ range (where .Site.AllPages.ByDate "Kind" "page").Reverse }}
-  {{ .Render "summary" }}
+  {{ .Render "list" }}
   {{ end }}
 </div>
 {{ end }}
