chore: validate site ownership for Google Search Admin

--- a/site/themes/sogilis/layouts/partials/head.html
+++ b/site/themes/sogilis/layouts/partials/head.html
@@ -58,4 +58,7 @@
   <link rel="stylesheet" href="{{ $shared.Permalink }}" type="text/css" />
 
   <link rel="icon" type="image/png" href="{{ "images/favicon.png" | relURL }}"/>
+
+  <!-- This is used by Google Search Admin to make sure we are the owner of this website -->
+  <meta name="google-site-verification" content="6gqbBJyYzYMPq7A3GgRD3HEb7oF1_ZCpKVfQxZ4p0qU" />
 </head>
