feature: add search

--- a/site/themes/sogilis/assets/css/header.css
+++ b/site/themes/sogilis/assets/css/header.css
@@ -19,3 +19,69 @@ header {
   box-shadow: 0 0 1rem 0.2rem rgba(0, 0, 0, 0.15);
   transition: margin-top 0.5s, box-shadow 0.5s;
 }
+
+/* Search */
+.search-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 1em;
+  height: 2em;
+  line-height: 1;
+}
+
+.search-bar__label {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  height: 100%;
+}
+
+.search-bar__icon {
+  cursor: pointer;
+  width: 1.3em;
+  margin: 0;
+  vertical-align: bottom;
+}
+
+.search-bar__icon path {
+  fill: #0056b3;
+}
+
+.search-bar__input {
+  border: 0;
+  padding: 0;
+  margin: 0;
+  width: 0;
+  outline: none;
+  background: transparent;
+  transition: width 0.5s;
+  color: #0056b3;
+}
+
+.search-bar__input:focus {
+  margin-left: 0.5em;
+  width: 10em;
+}
+
+.search-bar__results {
+  box-sizing: border-box;
+  position: fixed;
+  top: 116px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: white;
+  padding: 0 4em;
+  margin: 2em 0 0 0;
+  overflow-y: auto;
+}
+
+.search-bar__results-item:last-child {
+  margin-bottom: 5em;
+}
+
+.search-bar__results-item-link {
+  display: block;
+  padding: 0 0 1em;
+}
