--- a/site/themes/sogilis/layouts/partials/header.html
+++ b/site/themes/sogilis/layouts/partials/header.html
@@ -129,6 +129,15 @@
       >
         {{ i18n "contact" }}
       </a>
+      <a
+        class="
+          header-desktop-right-category
+          header-desktop-right-text
+        "
+        href="#"
+      >
+        <search-bar></search-bar>
+      </a>
     </div>
   </nav>
 
