--- a/site/themes/sogilis/assets/css/header.css
+++ b/site/themes/sogilis/assets/css/header.css
@@ -75,6 +75,7 @@ header {
   padding: 0 4em;
   margin: 2em 0 0 0;
   overflow-y: auto;
+  cursor: auto;
 }
 
 .search-bar__results-item:last-child {
