Remove unecessary padding in <blockquote> or <pre>

--- a/site/themes/sogilis/assets/css/article.css
+++ b/site/themes/sogilis/assets/css/article.css
@@ -82,7 +82,7 @@ blockquote,
 pre {
   width: 70%;
   margin: 1.9rem 0 1.9rem 3.75rem;
-  padding: 1.9rem 1.25rem 1.9rem 1.25rem;
+  padding: 0.4rem 1.25rem;
   border: solid 5px transparent;
 }
 
