--- a/site/themes/sogilis/layouts/partials/header.html
+++ b/site/themes/sogilis/layouts/partials/header.html
@@ -163,6 +163,9 @@
         src="{{ "images/logo_sogilis.svg" | relURL }}"
       />
     </a>
+
+    <search-bar class="search-bar-wrapper"></search-bar>
+
     <a
       id="header-mobile-threebarbutton"
       class="header-mobile-link"
@@ -170,6 +173,7 @@
     >
       <div id="header-mobile-threebarbutton-centralbar">&nbsp;</div>
     </a>
+
     <!-- header is displayed when we click on `header-mobile-threebarbutton -->
     <nav id="header-mobile-navmenu">
       <div id="header-mobile-navmenu-coloredline">
