Prettier code for header-inf767.css

--- a/site/themes/sogilis/assets/css/header-inf767.css
+++ b/site/themes/sogilis/assets/css/header-inf767.css
@@ -258,7 +258,7 @@ body.menuMobileIsDisplayed {
   margin-left: 0;
   width: 100%;
   padding: 1em;
-  border: initial
+  border: initial;
 }
 
 .search-bar__results {
