Replicate mobile menu modification from sogilis.fr

--- a/site/themes/sogilis/layouts/partials/header.html
+++ b/site/themes/sogilis/layouts/partials/header.html
@@ -155,6 +155,30 @@
             {{ i18n "ourVision" }}
           </a>
         </li>
+        <li class="header-mobile-navmenu-li">
+          <a
+            class="header-mobile-navmenu-link"
+            href="https://sogilis.fr/approche.html"
+          >
+            {{ i18n "ourApproach" }}
+          </a>
+        </li>
+        <li class="header-mobile-navmenu-li">
+          <a
+            class="header-mobile-navmenu-link"
+            href="https://sogilis.fr/emplois.html"
+          >
+            {{ i18n "joinUs" }}
+          </a>
+        </li>
+        <li class="header-mobile-navmenu-li">
+          <a
+            href="/"
+            class="header-mobile-navmenu-link"
+          >
+            {{ i18n "blog" }}
+          </a>
+        </li>
         <li>
           <a
             class="header-mobile-navmenu-link"
