--- a/site/themes/sogilis/layouts/partials/header.html
+++ b/site/themes/sogilis/layouts/partials/header.html
@@ -59,6 +59,54 @@
           </a>
         </div>
       </div>
+      <div id="header-desktop-right-dropdown">
+        <div
+          id="header-desktop-right-dropdown-title"
+          class="
+            bar-deco
+            bar-deco-hover
+            header-desktop-right-category
+            header-desktop-right-text
+          "
+        >
+          {{ i18n "theCompany" }}
+        </div>
+        <div id="header-desktop-right-dropdown-content" class="dropdown-content-company">
+          <a
+            class="
+              bar-deco
+              bar-deco-hover
+              header-desktop-right-dropdown-content-link
+              header-desktop-right-text
+            "
+            href="https://sogilis.fr/vision.html"
+          >
+            {{ i18n "ourVision" }}
+          </a>
+          <a
+            class="
+              bar-deco
+              bar-deco-hover
+              header-desktop-right-dropdown-content-link
+              header-desktop-right-text
+            "
+            href="https://sogilis.fr/approche.html"
+          >
+            {{ i18n "ourApproach" }}
+          </a>
+          <a
+            class="
+              bar-deco
+              bar-deco-hover
+              header-desktop-right-dropdown-content-link
+              header-desktop-right-text
+            "
+            href="https://sogilis.fr/emplois.html"
+          >
+            {{ i18n "joinUs" }}
+          </a>
+        </div>
+      </div>
       <a
         class="
           bar-deco
@@ -66,9 +114,9 @@
           header-desktop-right-category
           header-desktop-right-text
         "
-        href="https://sogilis.fr/vision.html"
+        href="/"
       >
-        {{ i18n "ourVision" }}
+        {{ i18n "blog" }}
       </a>
       <a
         class="
