chore: add alt image article in articles list

--- a/site/themes/sogilis/layouts/_default/summary.html
+++ b/site/themes/sogilis/layouts/_default/summary.html
@@ -4,17 +4,18 @@
     <!-- Otherwise "CSS Grid, grid item “height: 100%” not working in Chrome" -->
     <!-- (like in Safari) -->
     <!-- See https://stackoverflow.com/questions/50691765/css-grid-grid-item-height-100-not-working-in-chrome -->
-    {{ with .Params.image }}
-    <img
-      class="blogindex-article-img"
-      alt="Illustration de l'article"
-      src="{{ . | relURL }}"
-    />
+    {{ $defaultAltImage := "Illustration de l'article" }}
+    {{ if isset .Params "image" }}
+      <img
+        class="blogindex-article-img"
+        src="{{ .Params.image | relURL }}"
+        alt="{{ default $defaultAltImage .Params.altimage }}"
+      />
     {{ else }}
-    <img
-      class="blogindex-article-img"
-      alt="Illustration de l'article"
-      src="{{ "images/blog_preview_default.jpg" | relURL }}"
+      <img
+        class="blogindex-article-img"
+        src="{{ "images/blog_preview_default.jpg" | relURL }}"
+        alt="{{ $defaultAltImage }}"
       />
     {{ end }}
   </div>
